--- a/index.html
+++ b/index.html
@@ -1,40 +1,29 @@
 <!DOCTYPE html>
 
-<html lang="pt-BR">
+<html class="light" lang="pt-BR">
 
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Eventize</title>
+    <title>Eventizen Login</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#6A1B9A", // Vibrant Purple
-                        "accent": "#FF7043", // Warm Orange
-                        "background-light": "#F5F5F5",
-                        "background-dark": "#121212",
-                        "surface-light": "#FFFFFF",
-                        "surface-dark": "#1E1E1E",
-                        "text-primary-light": "#212121",
-                        "text-primary-dark": "#E0E0E0",
-                        "text-secondary-light": "#757575",
-                        "text-secondary-dark": "#BDBDBD",
+                        "primary": "#0052cc",
+                        "background-light": "#f5f7f8",
+                        "background-dark": "#0f1723",
                     },
                     fontFamily: {
                         "display": ["Inter", "sans-serif"]
                     },
-                    borderRadius: {
-                        "DEFAULT": "0.5rem", // 8px
-                        "lg": "0.75rem", // 12px
-                        "xl": "1rem", // 16px
-                        "full": "9999px"
-                    },
+                    borderRadius: { "DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px" },
                 },
             },
         }
@@ -46,140 +35,75 @@
     </style>
 </head>
 
-<body class="font-display bg-background-light dark:bg-background-dark">
-    <div class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden">
-        <!-- Top App Bar -->
-        <header
-            class="flex items-center bg-surface-light dark:bg-surface-dark p-4 pb-2 justify-between sticky top-0 z-10 shadow-sm">
-            <div class="w-12"></div>
-            <h1 class="text-xl font-bold leading-tight tracking-tight flex-1 text-center">
-                <img alt="Eventize Logo" class="h-8 mx-auto"
-                    src="https://lh3.googleusercontent.com/aida-public/AB6AXuA_dtz_BmLiqZ5EbA7-bOzC3lMIeJO_fO0HIYnSR6k2UBdxPE_RVXjAFKGS29CeVkLyi8vXcqeIy6zdfWXzoZhYtCRuVSiTey1ipYl8zmGriQQ3hvSHgk4g7syepfMkjF-BWDJMs4sD9oo5Lrj4rvu0AmWNq6gwTTn0CHlMDGYsX2MvJs64vLwpgkdGy4Sho33vCE1LYuq85GzbRz9dKat1CH9ccVJXV-VskwCBmgsJ8qx5Qayp6q4x6-dJ83qc3d-w3NFFBqSXSw" />
-            </h1>
-            <div class="flex w-12 items-center justify-end">
-                <!-- Placeholder for a potential icon like notifications or profile -->
-            </div>
-        </header>
-        <!-- Search Bar -->
-        <div class="px-4 py-3 bg-surface-light dark:bg-surface-dark">
-            <label class="flex flex-col min-w-40 h-14 w-full">
-                <div class="flex w-full flex-1 items-stretch rounded-xl h-full shadow-[0_2px_8px_rgba(0,0,0,0.08)]">
-                    <div
-                        class="text-text-secondary-light dark:text-text-secondary-dark flex bg-white dark:bg-surface-dark items-center justify-center pl-4 rounded-l-xl border-r-0">
-                        <span class="material-symbols-outlined">search</span>
+<body class="font-display">
+    <div class="relative flex h-auto min-h-screen w-full flex-col bg-primary group/design-root overflow-x-hidden">
+        <div class="flex w-full grow flex-col items-center justify-center p-6 sm:p-8">
+            <div class="flex w-full max-w-sm flex-col items-center gap-8">
+                <!-- Logo -->
+                <div class="w-48">
+                    <div class="w-full bg-center bg-no-repeat bg-contain aspect-square" data-alt="Eventize brand logo"
+                        style='background-image: url("Eventize.png"); border-radius: 100px;'>
                     </div>
-                    <input
-                        class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-text-primary-light dark:text-text-primary-dark focus:outline-0 focus:ring-2 focus:ring-primary/50 border-none bg-white dark:bg-surface-dark h-full placeholder:text-text-secondary-light placeholder:dark:text-text-secondary-dark px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
-                        placeholder="O que você quer viver hoje?" value="" />
                 </div>
-            </label>
-        </div>
-        <!-- Categories Carousel -->
-        <div
-            class="flex overflow-x-auto [-ms-scrollbar-style:none] [scrollbar-width:none] [&amp;::-webkit-scrollbar]:hidden bg-background-light dark:bg-background-dark pt-4">
-            <div class="flex items-stretch p-4 pt-0 gap-4">
-                <div
-                    class="flex h-full flex-1 flex-col gap-3 rounded-xl min-w-[10rem] bg-surface-light dark:bg-surface-dark shadow-[0_2px_8px_rgba(0,0,0,0.05)] p-4 items-center justify-center text-center">
-                    <div class="flex items-center justify-center h-12 w-12 rounded-full bg-primary/10 text-primary">
-                        <span class="material-symbols-outlined text-3xl">music_note</span>
+                <!-- Login Form -->
+                <div class="flex w-full flex-col gap-4">
+                    <label class="flex flex-col w-full">
+                        <p class="text-white text-base font-medium leading-normal pb-2">Login</p>
+                        <input
+                            class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-white focus:outline-0 focus:ring-2 focus:ring-white/50 border border-white/30 bg-white/20 h-14 placeholder:text-white/70 p-4 text-base font-normal leading-normal"
+                            placeholder="Digite seu e-mail" value=""/>
+                    </label>
+                    <label class="flex flex-col w-full">
+                        <p class="text-white text-base font-medium leading-normal pb-2">Senha</p>
+                        <div class="flex w-full flex-1 items-stretch rounded-lg">
+                            <input
+                                class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-white focus:outline-0 focus:ring-2 focus:ring-white/50 border border-white/30 bg-white/20 h-14 placeholder:text-white/70 p-4 rounded-r-none border-r-0 pr-2 text-base font-normal leading-normal"
+                                placeholder="Digite sua senha" type="password" value="" />
+                            <div
+                                class="text-white/70 flex border border-white/30 bg-white/20 items-center justify-center pr-4 rounded-r-lg border-l-0">
+                                <span class="material-symbols-outlined" data-icon="Eye" data-size="24px"
+                                    data-weight="regular">visibility</span>
+                            </div>
+                        </div>
+                    </label>
+                    <p class="text-white text-sm font-normal leading-normal text-right underline cursor-pointer">
+                        Esqueceu a senha?</p>
+                </div>
+                <!-- CTA Button -->
+                <div class="flex w-full">
+                    <a href="index.html" class="flex flex-1">
+                        <button
+                            class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 flex-1 bg-white text-primary text-base font-bold leading-normal tracking-[0.015em]">
+                            <span class="truncate">Entrar</span>
+                        </button>
+                    </a>
+                </div>
+                <!-- Social Login Section -->
+                <div class="flex w-full flex-col items-center gap-4">
+                    <div class="flex w-full items-center gap-4">
+                        <hr class="flex-1 border-t border-white/30" />
+                        <p class="text-white/80 text-sm">Ou entre com</p>
+                        <hr class="flex-1 border-t border-white/30" />
                     </div>
-                    <p class="text-text-primary-light dark:text-text-primary-dark text-base font-medium leading-normal">
-                        Shows</p>
-                </div>
-                <div
-                    class="flex h-full flex-1 flex-col gap-3 rounded-xl min-w-[10rem] bg-surface-light dark:bg-surface-dark shadow-[0_2px_8px_rgba(0,0,0,0.05)] p-4 items-center justify-center text-center">
-                    <div class="flex items-center justify-center h-12 w-12 rounded-full bg-primary/10 text-primary">
-                        <span class="material-symbols-outlined text-3xl">account_balance</span>
-                    </div>
-                    <p class="text-text-primary-light dark:text-text-primary-dark text-base font-medium leading-normal">
-                        Pontos Turísticos</p>
-                </div>
-                <div
-                    class="flex h-full flex-1 flex-col gap-3 rounded-xl min-w-[10rem] bg-surface-light dark:bg-surface-dark shadow-[0_2px_8px_rgba(0,0,0,0.05)] p-4 items-center justify-center text-center">
-                    <div class="flex items-center justify-center h-12 w-12 rounded-full bg-primary/10 text-primary">
-                        <span class="material-symbols-outlined text-3xl">theater_comedy</span>
-                    </div>
-                    <p class="text-text-primary-light dark:text-text-primary-dark text-base font-medium leading-normal">
-                        Teatro</p>
-                </div>
-                <div
-                    class="flex h-full flex-1 flex-col gap-3 rounded-xl min-w-[10rem] bg-surface-light dark:bg-surface-dark shadow-[0_2px_8px_rgba(0,0,0,0.05)] p-4 items-center justify-center text-center">
-                    <div class="flex items-center justify-center h-12 w-12 rounded-full bg-primary/10 text-primary">
-                        <span class="material-symbols-outlined text-3xl">restaurant</span>
-                    </div>
-                    <p class="text-text-primary-light dark:text-text-primary-dark text-base font-medium leading-normal">
-                        Culinária</p>
-                </div>
-            </div>
-        </div>
-        <!-- Section Header -->
-        <h2
-            class="text-text-primary-light dark:text-text-primary-dark text-xl font-bold leading-tight tracking-tight px-4 pb-3 pt-5">
-            Recomendações para você</h2>
-        <!-- Event Cards Feed -->
-        <div class="flex flex-col gap-4 px-4 pb-8">
-            <!-- Event Card 1 -->
-            <div
-                class="flex flex-col items-stretch justify-start rounded-xl overflow-hidden shadow-[0_4px_12px_rgba(0,0,0,0.08)] bg-surface-light dark:bg-surface-dark">
-                <div class="w-full bg-center bg-no-repeat aspect-video bg-cover"
-                    data-alt="A band playing samba music on a stage with colorful lights"
-                    style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAHidRz-2Oga8mYgFtORm_okn-z3---Dym61tC5x6fsKi1e3vJEZ-FaCwVGjA0RccGOjr12S2dSm_xlLrsA60fKs68JO_K8fWCHTbvIdwUjsc3aQgZW2nHHla538oa3sRxxVCu8kuICd70KRz3F5d3c9asJiF1635Hnw7QTVeEYbMXd1uEY1ci56EpRTkfVD-h7EOSlq8vZt2J5QusOOoznYECmx2BPBf1Ar12-ZmYjrd_8F1WoZTmMcT7N6qWqMFNppZouKz5o1w");'>
-                </div>
-                <div class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-1.5 p-4">
-                    <p
-                        class="text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight tracking-[-0.015em]">
-                        Grupo Paquerada</p>
-                    <div class="flex flex-col gap-1">
-                        <p
-                            class="text-text-secondary-light dark:text-text-secondary-dark text-sm font-normal leading-normal">
-                            2 km de você • Bar da Júlia</p>
-                        <p
-                            class="text-text-secondary-light dark:text-text-secondary-dark text-sm font-normal leading-normal">
-                            Hoje, 19h</p>
+                    <div class="flex w-full items-center justify-center gap-4">
+                        <button
+                            class="flex size-12 cursor-pointer items-center justify-center rounded-full border border-white/30 bg-white/20">
+                            <i class="bi bi-google" style="color: white;"></i>
+                        </button>
+                        <button
+                            class="flex size-12 cursor-pointer items-center justify-center rounded-full border border-white/30 bg-white/20">
+                            <i class="bi bi-facebook" style="color: white;"></i>
+                        </button>
+                        <button
+                            class="flex size-12 cursor-pointer items-center justify-center rounded-full border border-white/30 bg-white/20">
+                            <i class="bi bi-linkedin" style="color: white;"></i>
                     </div>
                 </div>
             </div>
-            <!-- Event Card 2 -->
-            <div
-                class="flex flex-col items-stretch justify-start rounded-xl overflow-hidden shadow-[0_4px_12px_rgba(0,0,0,0.08)] bg-surface-light dark:bg-surface-dark">
-                <div class="w-full bg-center bg-no-repeat aspect-video bg-cover"
-                    data-alt="A brightly lit theater stage with red curtains"
-                    style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDamj5fR77gYxnyPn9bYMaNM-lK4p56Y1NtatisPB77mksxwB9U28Ir5KsLfPPdCBDLY40zHLOowQjueoxdzzkQgHnHeCSHaxW16Ht-qCn_2wCiQag9fAMUIkdh9jCjm6EQgN2_4dVxaItBEMKdWZJxStDx8fKx0Fxw9OEKfHaWlZWbOL54Zlvl2HaLTcR5REsTRqNNtVcbPRRdEuf-_lBI2uUn7Sg-dR-MxHrVlHLylwvMJ2PEu3A3SjQwvP26N92texhKEB-odg");'>
-                </div>
-                <div class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-1.5 p-4">
-                    <p
-                        class="text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight tracking-[-0.015em]">
-                        Comédia Stand-up: Noite de Risos</p>
-                    <div class="flex flex-col gap-1">
-                        <p
-                            class="text-text-secondary-light dark:text-text-secondary-dark text-sm font-normal leading-normal">
-                            5 km de você • Teatro Municipal</p>
-                        <p
-                            class="text-text-secondary-light dark:text-text-secondary-dark text-sm font-normal leading-normal">
-                            Amanhã, 21h</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Event Card 3 -->
-            <div
-                class="flex flex-col items-stretch justify-start rounded-xl overflow-hidden shadow-[0_4px_12px_rgba(0,0,0,0.08)] bg-surface-light dark:bg-surface-dark">
-                <div class="w-full bg-center bg-no-repeat aspect-video bg-cover"
-                    data-alt="An assortment of gourmet food on a dark table"
-                    style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBoZmirngNnNAHvIGiPEQfwdZVwE63SfKJtey2gGKVlOc-tGESEP3KU9d5y-FGd2_DfG7si3b2Na99Bmp0x6RiD_wwjvU4sC7hRGQBjWWw8UbNDYuoaFB2l1uqXIXIN-HJijyuWzi1vTQdrHxZWqKQTqjfuyfEG2GJexR_HjARPjtBa-OrfOFldi-lSx_L5h-yHIFec9_2R2PXynGHJZgOgJl2v1Gp2Q33DIdTz_d6AUHxPE-nfhGNSjEzaaqayabEoFmTk0J61eA");'>
-                </div>
-                <div class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-1.5 p-4">
-                    <p
-                        class="text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight tracking-[-0.015em]">
-                        Festival Gastronômico Sabor da Cidade</p>
-                    <div class="flex flex-col gap-1">
-                        <p
-                            class="text-text-secondary-light dark:text-text-secondary-dark text-sm font-normal leading-normal">
-                            1 km de você • Praça Central</p>
-                        <p
-                            class="text-text-secondary-light dark:text-text-secondary-dark text-sm font-normal leading-normal">
-                            Sábado, 12h</p>
-                    </div>
-                </div>
+            <!-- Create Account Link -->
+            <div class="absolute bottom-6 text-center">
+                <p class="text-white/80 text-sm">Não tem uma conta? <a class="font-bold text-white underline"
+                        href="#">Crie uma aqui.</a></p>
             </div>
         </div>
     </div>
