--- a/culinaria.html
+++ b/culinaria.html
@@ -9,6 +9,7 @@
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+<link rel="stylesheet" href="transitions.css">
 <script>
     tailwind.config = {
       darkMode: "class",
@@ -204,4 +205,6 @@
 </button>
 </nav>
 </div>
-</body></html>
+</body>
+<script src="transitions.js"></script>
+</html>
