--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="transitions.css">
     <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
@@ -71,7 +72,7 @@
                 </div>
                 <!-- CTA Button -->
                 <div class="flex w-full">
-                    <a href="index.html" class="flex flex-1">
+                    <a href="primeira-pagina.html" class="flex flex-1">
                         <button
                             class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 flex-1 bg-white text-primary text-base font-bold leading-normal tracking-[0.015em]">
                             <span class="truncate">Entrar</span>
@@ -106,7 +107,7 @@
                         href="#">Crie uma aqui.</a></p>
             </div>
         </div>
-    </div>
-</body>
-
+        </div>
+    </body>
+    <script src="transitions.js"></script>
 </html>
