--- a/shows.html
+++ b/shows.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap"
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="transitions.css">
     <style>
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
@@ -52,10 +53,12 @@
         class="relative flex h-auto min-h-screen w-full flex-col bg-background-light dark:bg-background-dark group/design-root overflow-x-hidden">
         <header
             class="sticky top-0 z-10 flex items-center bg-background-light dark:bg-background-dark/80 dark:backdrop-blur-sm p-4 pb-3 justify-between border-b border-slate-200 dark:border-slate-800">
+            <a href="javascript:history.back()">
             <button
                 class="text-slate-800 dark:text-slate-200 flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-slate-200 dark:hover:bg-slate-700 transition-colors">
                 <span class="material-symbols-outlined text-2xl">arrow_back</span>
             </button>
+            </a>
             <h1
                 class="text-slate-900 dark:text-slate-50 text-lg font-bold leading-tight tracking-[-0.015em] absolute left-1/2 -translate-x-1/2">
                 Shows</h1>
@@ -168,5 +171,5 @@
         </main>
     </div>
 </body>
-
+<script src="transitions.js"></script>
 </html>
