--- a/teatro.html
+++ b/teatro.html
@@ -11,6 +11,7 @@
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="transitions.css">
     <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
@@ -50,12 +51,15 @@
         <!-- Top App Bar -->
         <header
             class="sticky top-0 z-10 flex items-center justify-between bg-background-light/80 p-4 pb-3 backdrop-blur-sm dark:bg-background-dark/80">
-            <div class="flex size-12 shrink-0 items-center">
-                <span class="material-symbols-outlined text-3xl text-primary">stadia_controller</span>
-            </div>
+            <a href="javascript:history.back()">
+                <div class="flex size-12 shrink-0 items-center cursor-pointer">
+                    <span class="material-symbols-outlined text-3xl text-primary">arrow_back</span>
+                </div>
+            </a>
             <h1
                 class="flex-1 text-xl font-bold leading-tight tracking-tight text-text-primary-light dark:text-text-primary-dark">
-                Eventize</h1>
+                <img alt="Eventize Logo" class="h-6 mx-auto" src="Eventize.png" />
+            </h1>
             <div class="flex w-12 items-center justify-end">
                 <button
                     class="flex h-12 cursor-pointer items-center justify-center rounded-full bg-transparent text-text-primary-light dark:text-text-primary-dark">
@@ -190,5 +194,5 @@
         </nav>
     </div>
 </body>
-
+<script src="transitions.js"></script>
 </html>
