arrumando e criando mais telas

--- a/primeira-pagina.html
+++ b/primeira-pagina.html
@@ -57,7 +57,11 @@
                 <img alt="Eventize Logo" class="h-6 mx-auto" src="Eventize.png" />
             </h1>
             <div class="flex w-12 items-center justify-end">
-                <!-- Placeholder for a potential icon like notifications or profile -->
+                <a href="usuario.html">
+                    <button class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-transparent hover:bg-surface-dark/10 dark:hover:bg-surface-light/10 transition-colors">
+                        <span class="material-symbols-outlined text-2xl text-text-primary-light dark:text-text-primary-dark">person</span>
+                    </button>
+                </a>
             </div>
         </header>
         <!-- Search Bar -->
@@ -94,7 +98,7 @@
                     <div class="flex items-center justify-center h-12 w-12 rounded-full bg-primary/10 text-primary">
                         <span class="material-symbols-outlined text-3xl">account_balance</span>
                     </div>
-                    <a href="pontos.html">
+                    <a href="pracas.html">
                         <p class="text-text-primary-light dark:text-text-primary-dark text-base font-medium leading-normal">
                             Pontos Turísticos</p>
                     </a>
@@ -117,6 +121,16 @@
                     <a href="culinaria.html">
                         <p class="text-text-primary-light dark:text-text-primary-dark text-base font-medium leading-normal">
                             Culinária</p>
+                    </a>
+                </div>
+                <div
+                    class="flex h-full flex-1 flex-col gap-3 rounded-xl min-w-[10rem] bg-surface-light dark:bg-surface-dark shadow-[0_2px_8px_rgba(0,0,0,0.05)] p-4 items-center justify-center text-center">
+                    <div class="flex items-center justify-center h-12 w-12 rounded-full bg-primary/10 text-primary">
+                        <span class="material-symbols-outlined text-3xl">map</span>
+                    </div>
+                    <a href="mapa.html">
+                        <p class="text-text-primary-light dark:text-text-primary-dark text-base font-medium leading-normal">
+                            Mapa</p>
                     </a>
                 </div>
             </div>
@@ -192,6 +206,29 @@
                             <p
                                 class="text-text-secondary-light dark:text-text-secondary-dark text-sm font-normal leading-normal">
                                 Sábado, 12h</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <!-- Event Card 4 - Rock in Rio -->
+            <a href="rock-in-rio.html">
+                <div
+                    class="flex flex-col items-stretch justify-start rounded-xl overflow-hidden shadow-[0_4px_12px_rgba(0,0,0,0.08)] bg-surface-light dark:bg-surface-dark cursor-pointer hover:shadow-[0_6px_16px_rgba(0,0,0,0.12)] transition-shadow duration-300">
+                    <div class="w-full bg-center bg-no-repeat aspect-video bg-cover"
+                        data-alt="Rock in Rio festival stage with crowd"
+                        style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAHidRz-2Oga8mYgFtORm_okn-z3---Dym61tC5x6fsKi1e3vJEZ-FaCwVGjA0RccGOjr12S2dSm_xlLrsA60fKs68JO_K8fWCHTbvIdwUjsc3aQgZW2nHHla538oa3sRxxVCu8kuICd70KRz3F5d3c9asJiF1635Hnw7QTVeEYbMXd1uEY1ci56EpRTkfVD-h7EOSlq8vZt2J5QusOOoznYECmx2BPBf1Ar12-ZmYjrd_8F1WoZTmMcT7N6qWqMFNppZouKz5o1w");'>
+                    </div>
+                    <div class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-1.5 p-4">
+                        <p
+                            class="text-text-primary-light dark:text-text-primary-dark text-lg font-bold leading-tight tracking-[-0.015em]">
+                            Rock in Rio</p>
+                        <div class="flex flex-col gap-1">
+                            <p
+                                class="text-text-secondary-light dark:text-text-secondary-dark text-sm font-normal leading-normal">
+                                Festival de música • Parque Olímpico</p>
+                            <p
+                                class="text-text-secondary-light dark:text-text-secondary-dark text-sm font-normal leading-normal">
+                                Em breve</p>
                         </div>
                     </div>
                 </div>
