--- a/rock-in-rio.html
+++ b/rock-in-rio.html
@@ -61,15 +61,16 @@
             </a>
             <h1
                 class="text-slate-900 dark:text-slate-50 text-lg font-bold leading-tight tracking-[-0.015em] absolute left-1/2 -translate-x-1/2">
-                Rock in Rio</h1>
+                <img alt="Eventize Logo" class="h-6 mx-auto rounded-full" src="Eventize.png" />
+            </h1>
         </header>
         <main class="flex-1 p-4">
             <div class="flex flex-col gap-6">
                 <!-- Hero Image -->
                 <div class="w-full rounded-xl overflow-hidden shadow-lg">
                     <div class="w-full bg-center bg-no-repeat aspect-video bg-cover"
-                        data-alt="Rock in Rio festival stage with crowd"
-                        style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAHidRz-2Oga8mYgFtORm_okn-z3---Dym61tC5x6fsKi1e3vJEZ-FaCwVGjA0RccGOjr12S2dSm_xlLrsA60fKs68JO_K8fWCHTbvIdwUjsc3aQgZW2nHHla538oa3sRxxVCu8kuICd70KRz3F5d3c9asJiF1635Hnw7QTVeEYbMXd1uEY1ci56EpRTkfVD-h7EOSlq8vZt2J5QusOOoznYECmx2BPBf1Ar12-ZmYjrd_8F1WoZTmMcT7N6qWqMFNppZouKz5o1w");'>
+                        data-alt="Rock in Rio festival stage with crowd and dramatic lighting"
+                        style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDLLJB7Jp-h5Yk1UH42HragVwFEuCdxSnL4H5i6CbiUZa3O_L1ssPNbrU2InTnCRHW78635ORSyUlugW7hRqnPy9ZCGBbybpcIiMjRF3XErPgRuQmfKv1D4Sb6QAbp4_2wfiaEeGYSKeqzu3DpMm01hm2cT6UuZWZEmRoqBfIo_sW6YBdlaaCmOtUyMN5Q2m7N2nt4Ms5eQZ4P3hpdhK0xhpBb0S-MRegq9tLrASv5rK5n4E0ACv8sXFqmdPrteEmm0Xb1G0JxthQ");'>
                     </div>
                 </div>
                 
