--- a/shows.html
+++ b/shows.html
@@ -61,7 +61,8 @@
             </a>
             <h1
                 class="text-slate-900 dark:text-slate-50 text-lg font-bold leading-tight tracking-[-0.015em] absolute left-1/2 -translate-x-1/2">
-                Shows</h1>
+                <img alt="Eventize Logo" class="h-6 mx-auto rounded-full" src="Eventize.png" />
+            </h1>
         </header>
         <main class="flex-1">
             <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-4 p-4">
