--- a/primeira-pagina.html
+++ b/primeira-pagina.html
@@ -54,7 +54,7 @@
             class="flex items-center bg-surface-light dark:bg-surface-dark p-4 pb-2 justify-between sticky top-0 z-10 shadow-sm">
             <div class="w-12"></div>
             <h1 class="text-xl font-bold leading-tight tracking-tight flex-1 text-center">
-                <img alt="Eventize Logo" class="h-6 mx-auto" src="Eventize.png" />
+                <img alt="Eventize Logo" class="h-6 mx-auto rounded-full" src="Eventize.png" />
             </h1>
             <div class="flex w-12 items-center justify-end">
                 <a href="usuario.html">
@@ -215,8 +215,8 @@
                 <div
                     class="flex flex-col items-stretch justify-start rounded-xl overflow-hidden shadow-[0_4px_12px_rgba(0,0,0,0.08)] bg-surface-light dark:bg-surface-dark cursor-pointer hover:shadow-[0_6px_16px_rgba(0,0,0,0.12)] transition-shadow duration-300">
                     <div class="w-full bg-center bg-no-repeat aspect-video bg-cover"
-                        data-alt="Rock in Rio festival stage with crowd"
-                        style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAHidRz-2Oga8mYgFtORm_okn-z3---Dym61tC5x6fsKi1e3vJEZ-FaCwVGjA0RccGOjr12S2dSm_xlLrsA60fKs68JO_K8fWCHTbvIdwUjsc3aQgZW2nHHla538oa3sRxxVCu8kuICd70KRz3F5d3c9asJiF1635Hnw7QTVeEYbMXd1uEY1ci56EpRTkfVD-h7EOSlq8vZt2J5QusOOoznYECmx2BPBf1Ar12-ZmYjrd_8F1WoZTmMcT7N6qWqMFNppZouKz5o1w");'>
+                        data-alt="Rock in Rio festival stage with crowd and dramatic lighting"
+                        style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDLLJB7Jp-h5Yk1UH42HragVwFEuCdxSnL4H5i6CbiUZa3O_L1ssPNbrU2InTnCRHW78635ORSyUlugW7hRqnPy9ZCGBbybpcIiMjRF3XErPgRuQmfKv1D4Sb6QAbp4_2wfiaEeGYSKeqzu3DpMm01hm2cT6UuZWZEmRoqBfIo_sW6YBdlaaCmOtUyMN5Q2m7N2nt4Ms5eQZ4P3hpdhK0xhpBb0S-MRegq9tLrASv5rK5n4E0ACv8sXFqmdPrteEmm0Xb1G0JxthQ");'>
                     </div>
                     <div class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-1.5 p-4">
                         <p
