--- a/teatro.html
+++ b/teatro.html
@@ -58,7 +58,7 @@
             </a>
             <h1
                 class="flex-1 text-xl font-bold leading-tight tracking-tight text-text-primary-light dark:text-text-primary-dark">
-                <img alt="Eventize Logo" class="h-6 mx-auto" src="Eventize.png" />
+                <img alt="Eventize Logo" class="h-6 mx-auto rounded-full" src="Eventize.png" />
             </h1>
             <div class="flex w-12 items-center justify-end">
                 <button
@@ -187,7 +187,7 @@
                 <span class="text-xs font-medium">Ingressos</span>
             </a>
             <a class="flex flex-col items-center justify-center gap-1 text-text-secondary-light dark:text-text-secondary-dark"
-                href="#">
+                href="usuario.html">
                 <span class="material-symbols-outlined">person</span>
                 <span class="text-xs font-medium">Perfil</span>
             </a>
