Criando tela de pontuacao de usuario

--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
                 </div>
             </div>
             <!-- Create Account Link -->
-            <div class="absolute bottom-6 text-center">
+            <div class="absolute bottom-6 text-center flex flex-col gap-2">
                 <p class="text-white/80 text-sm">Não tem uma conta? <a class="font-bold text-white underline"
                         href="#">Crie uma aqui.</a></p>
+                <a href="pontos.html" class="text-white/80 text-sm underline hover:text-white transition-colors">
+                    Ver Pontos e Recompensas
+                </a>
             </div>
         </div>
         </div>
