--- a/usuario.html
+++ b/usuario.html
@@ -86,11 +86,11 @@
                             <p class="text-[22px] font-bold leading-tight tracking-[-0.015em]">Carlos Silva</p>
                             <p class="text-gray-500 dark:text-gray-400 text-sm font-normal leading-normal">
                                 carlos.silva@exemplo.com | 25 anos</p>
-                            <div
-                                class="inline-flex items-center gap-1.5 bg-[#FFD700] text-black px-2.5 py-1 rounded-full w-fit mt-1">
+                            <a href="pontos.html"
+                                class="inline-flex items-center gap-1.5 bg-[#FFD700] text-black px-2.5 py-1 rounded-full w-fit mt-1 hover:bg-[#FFC700] transition-colors cursor-pointer">
                                 <span class="material-symbols-outlined text-base">star</span>
                                 <p class="text-sm font-bold leading-normal">1,250 Pontos</p>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -128,11 +128,13 @@
             </div>
             <!-- Rewards CTA -->
             <div class="px-4 pt-4">
-                <button
-                    class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 bg-primary text-white gap-2 text-base font-bold leading-normal tracking-[0.015em]">
-                    Ver Recompensas
-                    <span class="material-symbols-outlined">redeem</span>
-                </button>
+                <a href="pontos.html" class="flex w-full">
+                    <button
+                        class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 bg-primary text-white gap-2 text-base font-bold leading-normal tracking-[0.015em] hover:opacity-90 transition-opacity">
+                        Ver Recompensas
+                        <span class="material-symbols-outlined">redeem</span>
+                    </button>
+                </a>
             </div>
             <!-- Event History -->
             <div>
